--- a/android-mobile-jsw/jsw_app/src/main/AndroidManifest.xml
+++ b/android-mobile-jsw/jsw_app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+
+        <service android:name=".update.UpdateService" />
+
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
