--- a/android-mobile-jsw/jsw_app/build.gradle
+++ b/android-mobile-jsw/jsw_app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('src/libs/httpcore-4.4.1.jar')
     compile files('src/libs/MPChartLibs.jar')
     testCompile 'junit:junit:4.12'
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.8'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile project(':PullToRefreshLibrary')
 }
